--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="select">Select</string>
     <string name="post">Post</string>
     <string name="question_1">Question 1:</string>
+    <string name="rate_me">Rate Me</string>
 </resources>
