--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="post">Post</string>
     <string name="question_1">Question 1:</string>
     <string name="rate_me">Rate Me</string>
+    <string name="this_is_sending_message">This is sending message</string>
+    <string name="hello_this_is_a_message">Hello, this is a message.</string>
+    <string name="message">Message..</string>
 </resources>
